# zw-python-selenium-demo

./: README.md  pyproject.toml
features/: environment.py  login_page.feature
features/steps/: common_steps.py  login_steps.py
pages/: common.py  login.py  page.py
